# OpsTriage_AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md  app.py  pyproject.toml  requirements.txt
OpsTriage-AI-v2/: .env.example  README.md  app.py  ui_helpers.py
OpsTriage-AI-v2/attacks/: __init__.py  crescendo.py  jailbreak.py  library.py  model_leakage.py  obfuscation.py  pii.py  prompt_injection.py  red_teaming.py  schema.py  social_engineering.py  tool_enumeration.py
OpsTriage-AI-v2/defenses/: __init__.py  authorization.py  output_filter.py  pii_masking.py  prompt_guard.py
OpsTriage-AI-v2/docs/: attack_matrix.md  defense_recommendations.md  demo_script.md  executive_summary.md  production_checklist.md  security_findings.md  threat_model.md  threat_model_diagram.md
OpsTriage-AI-v2/evaluator/: __init__.py  evaluator.py  evidence.py  persistence.py  report_generator.py  scoring.py  (+1 more)
data/: dataset_info.json
docs/: Architecture.md  BaseVsFineTuned.md  DataQuality.md  Dataset.md  Decisions.md  Evaluation.md  EvaluationStrategy.md  FineTuningPlan.md  FineTuningResults.md  HumanInLoop.md  InterviewPrepGuide.md  LabelingGuide.md  NVIDIABrevTrainingPlan.md  OpsTriage_v1_1_ExecutionChecklist.md  PRD.md  Roadmap.md  SmokeTrainingPlan.md  TrainingEnvironment.md  TrainingRunbook.md
notebooks/: README.md
scripts/: compare_base_vs_finetuned.py  evaluate_classification.py  prepare_dataset.py  run_inference_on_test_set.py  update_sample_predictions.py
tests/: test_dataset_preparation.py  test_evaluate_classification.py  test_inference.py
(+33 files in other folders)
